build/log/idf_py_stdout_output_26511
[1/11] Building C object esp-idf/bus_spi/CMakeFiles/__idf_bus_spi.dir/bus_spi.c.obj
FAILED: esp-idf/bus_spi/CMakeFiles/__idf_bus_spi.dir/bus_spi.c.obj 
/home/happ/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20241119/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/happ/project/esp/esp32_as_flash_burner/build/config -I/home/happ/project/esp/esp32_as_flash_burner/components/bus_spi/include -I/home/happ/software/esp/esp-idf/components/newlib/platform_include -I/home/happ/software/esp/esp-idf/components/freertos/config/include -I/home/happ/software/esp/esp-idf/components/freertos/config/include/freertos -I/home/happ/software/esp/esp-idf/components/freertos/config/riscv/include -I/home/happ/software/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/happ/software/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/happ/software/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/happ/software/esp/esp-idf/components/freertos/esp_additions/include -I/home/happ/software/esp/esp-idf/components/esp_hw_support/include -I/home/happ/software/esp/esp-idf/components/esp_hw_support/include/soc -I/home/happ/software/esp/esp-idf/components/esp_hw_support/include/soc/esp32c3 -I/home/happ/software/esp/esp-idf/components/esp_hw_support/dma/include -I/home/happ/software/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/happ/software/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/happ/software/esp/esp-idf/components/esp_hw_support/port/esp32c3/. -I/home/happ/software/esp/esp-idf/components/esp_hw_support/port/esp32c3/include -I/home/happ/software/esp/esp-idf/components/heap/include -I/home/happ/software/esp/esp-idf/components/heap/tlsf -I/home/happ/software/esp/esp-idf/components/log/include -I/home/happ/software/esp/esp-idf/components/soc/include -I/home/happ/software/esp/esp-idf/components/soc/esp32c3 -I/home/happ/software/esp/esp-idf/components/soc/esp32c3/include -I/home/happ/software/esp/esp-idf/components/soc/esp32c3/register -I/home/happ/software/esp/esp-idf/components/hal/platform_port/include -I/home/happ/software/esp/esp-idf/components/hal/esp32c3/include -I/home/happ/software/esp/esp-idf/components/hal/include -I/home/happ/software/esp/esp-idf/components/esp_rom/include -I/home/happ/software/esp/esp-idf/components/esp_rom/esp32c3/include -I/home/happ/software/esp/esp-idf/components/esp_rom/esp32c3/include/esp32c3 -I/home/happ/software/esp/esp-idf/components/esp_rom/esp32c3 -I/home/happ/software/esp/esp-idf/components/esp_common/include -I/home/happ/software/esp/esp-idf/components/esp_system/include -I/home/happ/software/esp/esp-idf/components/esp_system/port/soc -I/home/happ/software/esp/esp-idf/components/esp_system/port/include/riscv -I/home/happ/software/esp/esp-idf/components/esp_system/port/include/private -I/home/happ/software/esp/esp-idf/components/riscv/include -I/home/happ/software/esp/esp-idf/components/lwip/include -I/home/happ/software/esp/esp-idf/components/lwip/include/apps -I/home/happ/software/esp/esp-idf/components/lwip/include/apps/sntp -I/home/happ/software/esp/esp-idf/components/lwip/lwip/src/include -I/home/happ/software/esp/esp-idf/components/lwip/port/include -I/home/happ/software/esp/esp-idf/components/lwip/port/freertos/include -I/home/happ/software/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/happ/software/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/happ/software/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/happ/software/esp/esp-idf/components/driver/deprecated -I/home/happ/software/esp/esp-idf/components/driver/i2c/include -I/home/happ/software/esp/esp-idf/components/driver/touch_sensor/include -I/home/happ/software/esp/esp-idf/components/driver/twai/include -I/home/happ/software/esp/esp-idf/components/esp_pm/include -I/home/happ/software/esp/esp-idf/components/esp_ringbuf/include -I/home/happ/software/esp/esp-idf/components/esp_driver_gpio/include -I/home/happ/software/esp/esp-idf/components/esp_driver_pcnt/include -I/home/happ/software/esp/esp-idf/components/esp_driver_gptimer/include -I/home/happ/software/esp/esp-idf/components/esp_driver_spi/include -I/home/happ/software/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/happ/software/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/happ/software/esp/esp-idf/components/esp_driver_i2s/include -I/home/happ/software/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/happ/software/esp/esp-idf/components/sdmmc/include -I/home/happ/software/esp/esp-idf/components/esp_driver_sdspi/include -I/home/happ/software/esp/esp-idf/components/esp_driver_sdio/include -I/home/happ/software/esp/esp-idf/components/esp_driver_dac/include -I/home/happ/software/esp/esp-idf/components/esp_driver_rmt/include -I/home/happ/software/esp/esp-idf/components/esp_driver_tsens/include -I/home/happ/software/esp/esp-idf/components/esp_driver_sdm/include -I/home/happ/software/esp/esp-idf/components/esp_driver_i2c/include -I/home/happ/software/esp/esp-idf/components/esp_driver_uart/include -I/home/happ/software/esp/esp-idf/components/vfs/include -I/home/happ/software/esp/esp-idf/components/esp_driver_ledc/include -I/home/happ/software/esp/esp-idf/components/esp_driver_parlio/include -I/home/happ/software/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/happ/project/esp/esp32_as_flash_burner=. -fmacro-prefix-map=/home/happ/software/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/bus_spi/CMakeFiles/__idf_bus_spi.dir/bus_spi.c.obj -MF esp-idf/bus_spi/CMakeFiles/__idf_bus_spi.dir/bus_spi.c.obj.d -o esp-idf/bus_spi/CMakeFiles/__idf_bus_spi.dir/bus_spi.c.obj -c /home/happ/project/esp/esp32_as_flash_burner/components/bus_spi/bus_spi.c
/home/happ/project/esp/esp32_as_flash_burner/components/bus_spi/bus_spi.c: In function 'send_command_array_withreturn':
/home/happ/project/esp/esp32_as_flash_burner/components/bus_spi/bus_spi.c:157:12: warning: missing terminating " character
  157 |     printf("\n);
      |            ^
/home/happ/project/esp/esp32_as_flash_burner/components/bus_spi/bus_spi.c:157:12: error: missing terminating " character
  157 |     printf("\n);
      |            ^~~~~
/home/happ/project/esp/esp32_as_flash_burner/components/bus_spi/bus_spi.c:160:5: error: expected expression before 'return'
  160 |     return ret;
      |     ^~~~~~
/home/happ/project/esp/esp32_as_flash_burner/components/bus_spi/bus_spi.c:160:16: error: expected ';' before '}' token
  160 |     return ret;
      |                ^
      |                ;
  161 | }
      | ~               
/home/happ/project/esp/esp32_as_flash_burner/components/bus_spi/bus_spi.c:161:1: error: control reaches end of non-void function [-Werror=return-type]
  161 | }
      | ^
cc1: some warnings being treated as errors
[2/11] Performing build step for 'bootloader'
[1/1] cd /home/happ/project/esp/esp32_as_flash_burner/build/bootloader/esp-idf/esptool_py && /home/happ/.espressif/python_env/idf5.4_py3.13_env/bin/python /home/happ/software/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/happ/project/esp/esp32_as_flash_burner/build/bootloader/bootloader.bin
Bootloader binary size 0x5160 bytes. 0x2ea0 bytes (36%) free.
ninja: build stopped: subcommand failed.
